fixed spacing on api output

--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,10 @@ p, h4, .modal-body{
 
 }
 
+.booktext2 {
+	font-size:16px;
+}
+
 #title {
 	padding-top: 20px;
 }
